--- a/src/modules/MouseWithoutBorders/App/Helper/MouseWithoutBordersHelper.csproj
+++ b/src/modules/MouseWithoutBorders/App/Helper/MouseWithoutBordersHelper.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>PowerToys.MouseWithoutBordersHelper</AssemblyName>    
     <DisableWinExeOutputInference>true</DisableWinExeOutputInference>    
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <OutputPath>$(RepoRoot)..\$(Platform)\$(Configuration)</OutputPath>
+    <OutputPath>$(RepoRoot)$(Platform)\$(Configuration)</OutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationIcon>..\Logo.ico</ApplicationIcon>
     <NoWin32Manifest>true</NoWin32Manifest>
